--- a/notes-alinen/notes-oct24.adoc
+++ b/notes-alinen/notes-oct24.adoc
@@ -7,4 +7,6 @@ include::header.adoc[]
 
 link:https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=6f7be79e-d21e-4bdf-96df-af38013aabde[Lecture - Mon]
 
+link:https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=d51a6974-b770-4605-b9d9-af3b00de2331[Lecture - Wed]
+
 link:https://github.com/BrynMawr-CS113-F22/class-examples-normoyle/tree/main/week09-oct24[Class Examples]
