--- a/schedule.adoc
+++ b/schedule.adoc
@@ -140,9 +140,8 @@
 //-----------------------------
 |11
 |Week of Nov 14th
-|*Runtime analysis, Recursion* anchor:week11[]
+|*Runtime analysis* anchor:week11[]
 
-* Read: Sedgewick and Wayne, Sec 2.3
 * link:jam4Guide.html[Jam 4 Guide]
 * link:notes-alinen/notes-nov14.html[Lecture Notes and Resources (Normoyle)] 
 * link:notes-azpoliak/notes-nov14.html[Lecture Notes and Resources (Poliak)] 
@@ -152,9 +151,9 @@
 //-----------------------------
 |12
 |Week of Nov 21st
-|*Recursion, Data structures: ArrayList, Hashmap and Dictionary* anchor:week12[]
+|*Recursion* anchor:week12[]
 
-* Read: Sedgewick and Wayne, Sec 4.4
+* Read: Sedgewick and Wayne, Sec 2.3
 * *NO CLASS THURSDAY, NOV 24th*
 * link:asst10.html[Assignment 10]: *Due Dec 1st*
 * link:notes-alinen/notes-nov21.html[Lecture Notes and Resources (Normoyle)] 
@@ -166,7 +165,7 @@
 |*Data structures: ArrayList, Hashmap and Dictionary* anchor:week13[]
 
 * Read: Sedgewick and Wayne, Sec 4.4
-* link:.html[Assignment 10]: *Due Dec 8*
+* link:asst11.html[Assignment 11]: *Extra credit, Due Dec 8*
 * link:notes-alinen/notes-nov28.html[Lecture Notes and Resources (Normoyle)] 
 * link:notes-azpoliak/notes-nov28.html[Lecture Notes and Resources (Poliak)] 
 * Lab activity: Code Jam 05, link:jam5Guide.html[Code jam 05]
@@ -176,10 +175,8 @@
 |Week of Dec 5th
 |*Final Thoughts* anchor:week14[]
 
-* link:jam5Guide.html[Final exam guide]
+* Lab activity: link:finalGuide.html[Final exam Study guide]
 * link:notes-alinen/notes-dec05.html[Lecture Notes and Resources (Normoyle)] 
 * link:notes-azpoliak/notes-dec05.html[Lecture Notes and Resources (Poliak)] 
-* Lab activity: final practice link:jam6Guide.html[Code jam 06 study guide]
-* Final exam study guide, link:[Final exam study guide]
 
 |===
