--- a/asst11.adoc
+++ b/asst11.adoc
@@ -166,10 +166,13 @@ information if the user inputs the wrong number of command line arguments.
 [discrete]
 == More examples
 
-Below is sample output for the text, "tolstoy.txt", from your program `Frequency.java`
+Below is sample output using your program `WordCount.java`, `for the text, "tolstoy.txt".
+
 
 * link:logs/a11-allwords.txt[Word counts for tolstoy.txt]
 * link:logs/a11-withignore.txt[Word counts (ignoring common words) for tolstoy.txt]
+
+NOTE: "tolstoy.txt" is the same input you used in link:asst04.html[Assignment 04] with `Frequency.java`
 
 = What to hand-in
 
