--- a/asst11.adoc
+++ b/asst11.adoc
@@ -66,43 +66,54 @@ All words having counts greater than 10 are displayed.
 [source,subs="quotes"]
 ----
 $ **java-introcs WordCounts catinhat.txt 10**
-The number of unique words is: 432
-The number of words with counts greater than 10: 35
+The number of unique words is: 238
+The number of words with counts greater than 10: 46
 the: 97
-and: 68
-i: 48
-not: 37
+and: 69
+i: 59
+not: 41
+said: 39
+you: 34
+a: 33
 to: 32
-a: 32
-you: 30
-said: 29
-in: 26
+in: 27
 we: 26
-with: 22
+cat: 26
+do: 25
+that: 25
+with: 24
 is: 22
 will: 21
-that: 20
+then: 20
+fish: 20
+he: 18
+things: 18
+up: 17
 on: 17
-then: 17
-he: 17
+this: 16
+so: 16
+no: 16
+they: 16
 of: 16
-things: 15
-up: 15
-do: 15
+look: 16
+all: 15
+can: 15
+two: 15
+like: 14
 what: 14
-can: 14
-cat: 14
 at: 14
+hat: 14
+one: 13
 our: 13
-like: 13
-they: 13
+it: 13
+have: 13
+oh: 13
 thing: 12
-fish: 12
-this: 12
+mother: 12
+now: 11
+them: 11
 should: 11
-oh,: 11
-mother: 11
-one: 11
+down: 11
 ----
 
 In the next example, we run `WordCounts` on the "Cat in the Hat" again, 
@@ -111,20 +122,25 @@ but this time we ignore small words, such as "the", "a", "he", etc.
 [source,subs="quotes"]
 ----
 $ **java-introcs WordCounts catinhat.txt 10 ignorewords.txt**
-The number of unique words is: 374
-The number of words with counts greater than 10: 12
+The number of unique words is: 179
+The number of words with counts greater than 10: 17
+cat: 26
 will: 21
-things: 15
-up: 15
-can: 14
-cat: 14
+fish: 20
+things: 18
+up: 17
+look: 16
+no: 16
+can: 15
+two: 15
+like: 14
+hat: 14
+oh: 13
 our: 13
-like: 13
 thing: 12
-fish: 12
+mother: 12
+down: 11
 should: 11
-mother: 11
-oh,: 11
 ----
 
 Requirements:
@@ -134,6 +150,18 @@ Requirements:
 * Use a HashMap to store <String,Word> pairs. 
 * To sort, create an ArrayList<Word> that contains all words with count greater <NumWords>. Then use a sorting algorithm to sort from greatest to least counts.
 * You can load the list of "ignore" words into an ArrayList<String> using `In`. ArrayList<String> has a method `contains` that will return true if the list contains a word. 
+
+HINT: Convert all strings to lowercase and strip punctuation for each word before updating the counts in your HashMap. For example,
+
+[source]
+----
+String text = file.readString();
+text = text.toLowerCase();
+text = text.replaceAll("[^a-z]", "");
+----
+
+NOTE: You can output the number of times a word appears in a file using the command line. For example, to 
+output the number of times "the" appears in a file, do `grep -o -i -r "\bthe\b" catinhat.txt | wc -l`. Embed "the" inbetween the "\b" symbols in the command.
 
 [discrete]
 == Optional command line arguments
